Fix text-wrap

--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -30,7 +30,6 @@
     @apply text-lg;
   }
   h3 {
-    @apply text-balance;
     @apply text-pretty;
   }
   /* Block elements */
